# RCTD

./: .gitignore  How to run project in Dev Env.md  Product Requirements Document Calander ToDo Start.md  move_project.bat  package.json  project_checklist.md
calendar-todo-app/: README.md  create-better-icons.ps1  create-icons-simple.ps1  create-icons.bat  create-icons.ps1  create-new-icons.ps1  init.bat  package.json
calendar-todo-app/migrations/: 001_initial_schema.sql  002_default_kanban_columns.sql
calendar-todo-app/src-tauri/: Cargo.toml  tauri.conf.json
calendar-todo-app/src-tauri/icons/: icon.icns
calendar-todo-app/src-tauri/src/: main.rs
calendar-todo-app/src/db/: error.rs  mod.rs  models.rs  operations.rs
calendar-todo-app/src/services/: category_service.rs  event_service.rs  holiday_feed_service.rs  kanban_service.rs  mod.rs  note_service.rs  participant_service.rs  recurring_service.rs  reminder_service.rs  search_service.rs  task_service.rs  time_tracking_service.rs
calendar-todo-app/src/tests/: category_tests.rs  event_tests.rs  holiday_feed_tests.rs  kanban_tests.rs  mod.rs  models_tests.rs  note_tests.rs  operations_tests.rs  participant_tests.rs  performance_tests.rs  recurring_tests.rs  reminder_tests.rs  search_tests.rs  task_tests.rs  test_utilities.rs  time_tracking_tests.rs
calendar-todo-app/tests/integration/: PHASE1_HISTORICAL_ANALYSIS.md  PHASE2_COMPREHENSIVE_DEVELOPMENT.md  PHASE2_SESSION_PROGRESS_SUMMARY.md  (+4 more)
calendar-todo-app/ui/: index.html  jest.config.js  jest.datetime.config.js  package.json  tsconfig.json  vite.config.ts
(+157 files in other folders)
