[package]
name = "calendar-todo-app"
version = "0.1.0"
description = "Calendar and Todo Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"
rstest = "0.18"
serial_test = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
